(PC-41216)[PRO] fix: make sure large offer name is not hidden by status

--- a/pro/src/pages/CollectiveOffer/CollectiveOfferSummary/BookableOfferSummary/BookableOfferSummary.module.scss
+++ b/pro/src/pages/CollectiveOffer/CollectiveOfferSummary/BookableOfferSummary/BookableOfferSummary.module.scss
@@ -3,6 +3,12 @@
 @use "styles/mixins/_size.scss" as size;
 
 .header-title {
+  @media (min-width: size.$tablet) {
+    max-width: rem.torem(588px);
+  }
+}
+
+.header-status {
   position: absolute;
   top: 0;
   right: 0;
